# Intellectra

./: .env  README.md  pyproject.toml  requirements.txt
outputs/: competitor_output.md  dev_architect_output.md  feasibility_analyst_output.md  idea_improver_output.md  researcher_output.md  summarizer_output.md  tech_advisor_output.md
src/intellectra/: app.py  crew.py  llms.py  main.py
src/intellectra/config/: agents.yaml  tasks.yaml
src/intellectra/tools/: custom_tool.py
