[project]
name = "intellectra"
version = "0.1.0"
description = "intellectra using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
intellectra = "intellectra.main:run"
run_crew = "intellectra.main:run"
train = "intellectra.main:train"
replay = "intellectra.main:replay"
test = "intellectra.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
